[gd_scene load_steps=7 format=3 uid="uid://jtjlhnor180p"]

[ext_resource type="Script" uid="uid://bdtsb5dtr6h2x" path="res://Scenes/ControllingGUI/settings.gd" id="1_tkgct"]
[ext_resource type="Script" uid="uid://cykehnss75gl" path="res://Scenes/ControllingGUI/trail.gd" id="2_la4sr"]

[sub_resource type="SphereMesh" id="SphereMesh_tkgct"]

[sub_resource type="Gradient" id="Gradient_la4sr"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2ppyf"]
gradient = SubResource("Gradient_la4sr")

[sub_resource type="Curve" id="Curve_la4sr"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tkgct")

[node name="Elements" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorPicker" type="ColorPicker" parent="Elements"]
layout_mode = 0
offset_left = 15.0
offset_top = 9.0
offset_right = 313.0
offset_bottom = 378.0
scale = Vector2(0.8, 0.8)
edit_alpha = false
picker_shape = 2
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
hex_visible = false
presets_visible = false

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_left = 10.0
offset_top = 23.0
offset_right = 50.0
offset_bottom = 63.0

[node name="ChangeColor" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 63.0
offset_top = 26.0
offset_right = 175.0
offset_bottom = 89.0
text = "Change Color"

[node name="Disconnect" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 64.0
offset_top = 100.0
offset_right = 176.0
offset_bottom = 163.0
text = "Disconnect"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 521.0
offset_right = 178.0
offset_bottom = 585.0
text = "Back"

[node name="Confirm" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 45.0
offset_top = 32.0
offset_right = 219.0
offset_bottom = 123.0
text = "Are you sure?"

[node name="Yes" type="Button" parent="Confirm"]
layout_mode = 0
offset_left = 29.0
offset_top = 406.0
offset_right = 131.0
offset_bottom = 470.0
text = "Confirm"

[node name="Player" type="Node2D" parent="."]
position = Vector2(127, 396)
scale = Vector2(40, 40)

[node name="PlayerMesh" type="MeshInstance2D" parent="Player"]
position = Vector2(-3.72529e-09, -1.975)
mesh = SubResource("SphereMesh_tkgct")
texture = SubResource("GradientTexture1D_2ppyf")

[node name="Trail" type="Line2D" parent="Player/PlayerMesh"]
top_level = true
points = PackedVector2Array(2.38419e-07, 0.0500002)
width = 40.0
width_curve = SubResource("Curve_la4sr")
script = ExtResource("2_la4sr")

[connection signal="color_changed" from="Elements/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="Buttons/ChangeColor" to="." method="_on_change_color_pressed"]
[connection signal="pressed" from="Buttons/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Confirm/Yes" to="." method="_on_yes_pressed"]
